# intro_archicad

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pixi.toml  pyproject.toml  sinc_nav.py  sitemap.xml  teste.py  zensical.toml
archicad_testes/: aula_02_2025.pln.lck
cobertura/: cobertura.html
composicoes/: composicoes.html
dimensoes/: dimensoes.html
docs/: index.md
docs/archicad_testes/: CANETAS_ARCHICAD.xml
docs/cobertura/: cobertura.md
docs/composicoes/: composicoes.md
docs/dimensoes/: dimensoes.md
docs/escadas/: escadas.md
docs/exemplo_projeto/: projeto_modelo.md
docs/folhas_de_trabalho/: referencias.md
docs/impressao/: conjunto_pup.md  livro_de_layouts.md  mapa_de_vistas.md  representacao.md
docs/interface_arch/: interface.md
docs/janelas_portas/: janelas_portas.md
docs/paredes/: juncoes.md  paredes.md
docs/pisos/: pisos.md
escadas/: escadas.html
exemplo_projeto/: projeto_modelo.html
folhas_de_trabalho/: referencias.html
impressao/: conjunto_pup.html  livro_de_layouts.html  mapa_de_vistas.html  representacao.html
interface_arch/: interface.html
janelas_portas/: janelas_portas.html
paredes/: juncoes.html  paredes.html
paredes_cortina/: paredes_cortina.html
pisos/: pisos.html
roteiros/: roteiro_aula_01.html  roteiro_aula_02.html  roteiro_aula_03.html  roteiro_aula_04.html  roteiro_aula_05.html  roteiro_aula_06.html  roteiro_aula_07.html  roteiro_aula_08.html  roteiro_aula_09.html  roteiro_aula_10.html
site/: 404.html  index.html  sitemap.xml
terreno/: terreno_modelagem.html
zonas/: zonas.html
(+17 files in other folders)
